--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-light">
   <header class="position-relative">
-    <nav class="navbar navbar-expand-sm bg-body-tertiary fixed-top opacity-75">
+    <nav class="navbar navbar-expand-sm bg-body-tertiary fixed-top bg-opacity-75">
         <div class="container-fluid">
             <a class="navbar-brand gradient-word fs-3 border-end border-1 pe-2" href="#">
                 <img class="rounded-circle mx-4" src="images/egy-icon.png" alt="Bootstrap" width="70" height="50">
