--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <span class="trips-t">T</span>rips
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu opacity-75">
                   <li><a class="dropdown-item text-info" href="#">Cairo</a></li>
                   <li><a class="dropdown-item text-info" href="#">Alex</a></li>
                   <li><hr class="dropdown-divider"></li>
